# hair-rendering-thesis

./: .gitignore  CMakeCache.txt  CMakeLists.txt  HairRenderingThesis.files  HairRenderingThesis.includes  README.md  cmake_install.cmake  compile_commands.json  straight-hair.exr
assets/: bezier-fs.glsl  bezier2-fs.glsl  bezier2-gs.glsl  bezier2-vs.glsl  fragmentShader.glsl  vertexShader.glsl
assets/fallback/: bezier-fs.glsl  bezier-vs.glsl
cmake/Modules/: FindOpenVDB.cmake
docs/: .~lock.planning update.odt#  dualscattering_mis.aux  dualscattering_mis.bib  dualscattering_mis.blg  dualscattering_mis.dvi  dualscattering_mis.tex  mis.odt  planning nominaal.odt  planning update.odt  planning verwerking feedback.odt
experiment/2019_01_26/: distantlight_around_x.properties
experiment/2019_02_07_writingvdb/: models  run.sh
experiment/2019_02_11_marschner/: models  straight.pbrt  textures
experiment/2019_02_11_marschner rotating/: base.properties  causticmerge.properties  distantlight_around_x.properties  distantlight_around_y_elevated.properties  prepare_all.sh  woman-head.scene
experiment/2019_dualscattering/: base.properties  base.properties~  base_production.properties  dbdf-variation.props  distantlight_around_y_elevated.48.properties  env-rotation.props  moving_around_y.properties  moving_around_y.properties~  plotgraph.py  prepare_all.sh  prepare_all.sh~  prepare_areadome.sh  prepare_dbdf.sh  prepare_nicerenderings.sh  rotating_model_around_y.properties  samples.props  test.vdb  woman-head (copy).scene  woman-head-arealight-dome.scene  woman-head.scene
experiment/2019_marschner_complete/: ab.txt  af.txt  base.properties  causticwidth.properties  distantlight_around_y_elevated.properties  lighting_around_x.48.properties  lighting_around_y.48.properties  lighting_around_y.properties  lighting_around_y_elevated.48.properties  lighting_around_y_elevated.properties  moving_around_y.properties  prepare_all.sh  straight.pbrt  woman-head.scene
nbproject/: .LCKconfigurations.xml~  configurations.xml  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  configurations.xml  private.xml
output/: curly-hair.exr  sphere-hairblock.exr  straight-hair.exr  wCurly-with-head.exr
output/2018_08_25 test-distlight/: distlight.properties  prepare_all.sh  renderall.sh  woman-head.scene
output/2018_08_26 basic_skeleton/: base.properties  distant_from_back_around_CW.properties  distant_front_around_CW.properties  distant_front_over_back.properties  prepare_all.sh  renderall.sh  woman-head.scene
output/2019_01_26/: base2.properties  base_production.properties  distantlight_around_y.properties  log.txt  prepare_all.sh  sidebyside.pbrt_  woman-head.scene
output/align-pbrt-and-cemyuksel-model/: curly-cemyuksel.view.10.exr  curly-elliptical-cemyuksel.view.10.exr  curly-pbrt.view.10.elliptical.exr  curly-pbrt.view.10.exr  prepare_all.sh  readme.txt  renderall.sh  woman-head.properties  woman-head.scene
output/all-models/: curly-with-head.view135.50.exr  curly-with-head.view225.50.exr  curly-with-head.view315.50.exr  curly-with-head.view45.50.exr  prepare_all.sh  renderall.sh  straight-with-head.view135.50.exr  straight-with-head.view225.50.exr  straight-with-head.view315.50.exr  straight-with-head.view45.50.exr  wavy-with-head.view135.50.exr  wavy-with-head.view225.50.exr  wavy-with-head.view315.50.exr  wavy-with-head.view45.50.exr  wavythin-with-head.view135.50.exr  wavythin-with-head.view225.50.exr  wavythin-with-head.view315.50.exr  wavythin-with-head.view45.50.exr  woman-head.properties  woman-head.scene
output/all-models-april-9/: curly-with-head.xthin.25.exr  prepare_all.sh  straight-with-head.xthin.25.exr  wavy-with-head.xthin.25.exr  wavythin-with-head.exr  wavythin-with-head.xthin.25.exr  woman-head.properties  woman-head.properties~  woman-head.scene
output/analyze-info-pbrthair-vs-cemyukselhair/: info-curly-cy.txt  info-curly-pbrt.txt  info-curly-xthin.txt  readme.txt  wCurly-cemyuksel.pbrt  wCurly-pbrt.pbrt  wCurly.xthin.pbrt
output/curlyhair/: uniform-light.pbrt
output/hair/: curly-with-head.exr  renderall.sh  straight-with-head.exr  wavy-with-head.exr  woman-head.properties  woman-head.scene
output/original-pbrt-scene/: curly-hair.exr  curly-hair.pbrt  models  straight-hair.pbrt  textures
output/straighthair/: uniform-light.pbrt
output/thickness-variation/: curly.25.exr  curly.thin.25.exr  curly.xthin.25.exr  prepare_all.sh  renderall.sh  woman-head.properties
results/2019_02_07_writingvdb/: testvdb_integration_wStraight10_voxelsize0_1.txt  testvdb_integration_wStraight10_voxelsize0_2.txt  wCurly.voxelsize1.vdb  wStraight.10.voxelsize1.vdb  wStraight.10.voxelsize2.vdb  wStraight.voxelsize1.vdb
results/2019_08_02/: inflight_16_samples_deon.pbrt  inflight_16_samples_uniform.pbrt  inflight_32_samples_deon.pbrt  inflight_32_samples_uniform.pbrt  inflight_4_samples_deon.pbrt  inflight_4_samples_uniform.pbrt
results/aug27_2019/: deon_04samples_venice_0000.pbrt  deon_08samples_venice_0000.pbrt  deon_16samples_venice_0000.pbrt  prepare_all.sh  uniform_04samples_venice_0000.pbrt  uniform_08samples_venice_0000.pbrt  uniform_16samples_venice_0000.pbrt
scenes/crate/: crate-scene.pbrt
scenes/hair/: curly-hair.pbrt  curly-hair.scene  curly-hair.scene.properties  scene.properties  sphere-hairblock.pbrt  straight-hair-with-head.pbrt  straight-hair-with-head.scene  straight-hair.pbrt  wCurly-with-head.pbrt  wStraight-with-head.pbrt  wWavy-with-head.pbrt  wWavyThin-with-head.pbrt  woman-head.properties  woman-head.scene
scenes/hair-pbrt/: curly-hair.exr  curly-hair.pbrt
src/blender-scripts/: export_to_pbrt.py  move_x_by_one.py  objectivec.py  pbrtBlend.py
src/dualscattering/: dualscattering.cpp  dualscattering.h
src/python/: bessel.py  boxmuller.py  gammaRootOutsideRange.py  marschner.py  plotgraph.py  polarplot.py  samplingstrategies.py  scatteringdistrib.py  testrowcolsnp.py
src/scripts/: analyze-hair.cpp  animatedproperty.cpp  animatedproperty.h  animationpropertybag.cpp  animationpropertybag.h  animationtype.h  bezier.cpp  bezier.h  (+23 more)
(+205 files in other folders)
